--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
                 android:background="@drawable/rounded_edittext"
                 android:inputType="number"
                 android:maxLength="2"
+                android:imeOptions="actionNext"
                 android:maxLines="1"
                 android:textAlignment="center"
                 android:textColor="#9b9a95"
@@ -46,6 +47,7 @@
                 android:background="@drawable/rounded_edittext"
                 android:inputType="number"
                 android:maxLength="2"
+                android:imeOptions="actionNext"
                 android:maxLines="1"
                 android:textAlignment="center"
                 android:textColor="#9b9a95"
@@ -59,6 +61,7 @@
                 android:background="@drawable/rounded_edittext"
                 android:inputType="number"
                 android:maxLength="2"
+                android:imeOptions="actionNext"
                 android:maxLines="1"
                 android:textAlignment="center"
                 android:textColor="#9b9a95"
@@ -72,6 +75,7 @@
                 android:background="@drawable/rounded_edittext"
                 android:inputType="number"
                 android:maxLength="2"
+                android:imeOptions="actionDone"
                 android:maxLines="1"
                 android:textAlignment="center"
                 android:textColor="#9b9a95"
